# crcspeed

./: CMakeLists.txt  README.md  crc16speed.h  crc64speed.c  crc64speed.h  crc_bench.c  crc_simd.c  crc_simd.h  crc_test.c  crcspeed.h  gen_constants.c  main.c
.github/workflows/: ci.yml
